# remindme_bot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  remindme_bot_compose.yml  requirements.txt
remindme_bot/: __init__.py  __main__.py  database.py  discord_cli.py
